--- a/app/views/upmin/products/update.js.erb
+++ b/app/views/upmin/products/update.js.erb
@@ -1,3 +1,4 @@
-$("[data-role=receiver] [data-role=product_couples_form] .busy").hide()
+$("[data-role$=receiver] form .busy").hide()
 
-$("[data-role=receiver] .panel-title .size").text(<%= @product.product_couples.count %>)
+$("[data-role=product_couples_receiver] .panel-title .size").text(<%= @product.product_couples.count %>)
+$("[data-role=extra_categories_receiver] .panel-title .size").text(<%= @product.extra_categories.without(@product.parent_id).count %>)
